Bug 475078: Fix hang during "save-as-complete" by using nsTArray::Contains instead of nsTArray::IndexOf to check for array-membership. r+sr=roc a=beltzner